<resources>
    <string name="app_name">WuerfelAbziehApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_1_6">number 1 - 6</string>
    <string name="show_list">Show list</string>
    <string name="add_to_list">Add to list</string>
    <string name="clear_list">Clear list</string>
    <string name="start_cheating">Start cheating !</string>
</resources>