<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.GameWonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameWonConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/button_start_cheating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="40dp"
            android:text="@string/start_cheating"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button_clear_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/clear_list"
            app:layout_constraintBottom_toTopOf="@+id/button_show_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_add_to_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="200dp"
            android:text="@string/add_to_list"
            app:layout_constraintBottom_toTopOf="@+id/button_start_cheating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_show_list" />

        <Button
            android:id="@+id/button_show_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/show_list"
            app:layout_constraintBottom_toTopOf="@+id/button_add_to_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_clear_list" />

        <EditText
            android:id="@+id/numberPicker_number_to_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/number_1_6"
            android:inputType="numberSigned"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/button_start_cheating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_add_to_list"
            android:autofillHints="" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>